# routstr-testing

./: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
docs/: PLAN-full-node-coverage.md
providers/: README.md  anthropic.yaml  fireworks.yaml  groq.yaml  openai.yaml  openrouter.yaml  together.yaml
providers/models/: anthropic.json  fireworks.json  groq.json  openai.json  openrouter.json  together.json
runner/: balance.py  compose.py  cost.py  junit.py  models.py  orchestrate.py  providers.py  scenario.py
scenarios/: openai_chat_completions.yaml  real_inference.yaml  remote_smoke.yaml  routstrd_cheapest.yaml  secret_lifecycle.yaml  secrets_at_rest.yaml  smoke.yaml  smoke_fail.yaml  swap_foreign_mint.yaml  swap_foreign_mint_retry.yaml  topup_input_fee.yaml  xcashu.yaml
scripts/: dump_logs.sh  sync.sh  wait_for.sh
server/: __init__.py  balance.py  config.py  main.py  providers.py  runs.py  scenarios.py  schemas.py
tests/: conftest.py  test_orchestrate_balance.py  test_orchestrate_upstream.py  test_runner_balance.py  test_runner_providers.py  test_server_balance.py  test_server_providers.py  test_server_runs.py  test_server_scenarios.py  test_server_token_hygiene.py  test_smoke.py  test_smoke_fail.py
tests/cli/: conftest.py  helpers.py  test_handwritten.py  test_schema_driven.py
tests/integration/: _swap_helpers.py  fault_proxy.py  node_boot.py  spend.py  targets.py  test_real_inference.py  test_xcashu.py  (+7 more)
vendor-dockerfiles/: routstr-cli.Dockerfile  routstrd.Dockerfile
webui/: Dockerfile  index.html  package.json  pnpm-lock.yaml
(+10 files in other folders)
